--- a/Demo/InfiniteMenuDemo/package.json
+++ b/Demo/InfiniteMenuDemo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infinite-menu-demo",
-  "version": "0.0.0",
+  "version": "0.0.23",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^17.0.4",
     "@angular/common": "^17.0.4",
